# django-moses

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  make_migrations.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test-and-merge.yml
docs/: conf.py  index.rst
docs/superpowers/specs/: 2026-07-18-customizable-message-templates-design.md
moses/: admin.py  apps.py  authentication.py  conf.py  decorators.py  enums.py  errors.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
moses/common/: error_codes.py  exception_handlers.py  exceptions.py  renderers.py  views.py
moses/constants/: strings.py
moses/migrations/: 0001_initial.py  0002_alter_customuser_preferred_language.py  0002_remove_customuser_last_password_reset_sms_sent_at_and_more.py  0002_remove_customuser_last_phone_number_confirmation_pins_sent_and_more.py  0002_rename_email_candidate_confirm_pin_customuser_email_candidate_confirmation_pin_and_more.py  0002_rename_last_phone_number_candidate_confirmation_pin_sent_customuser_last_phone_number_confirmation_p.py  0003_customuser_google_sub.py  0003_customuser_phone_number_confirm_attempts.py  0003_customuser_phone_number_confirmation_code_sms_sent_at.py  0003_rename_last_phone_number_candidate_confirmation_pin_sent_customuser_last_phone_number_confirmation_p.py  0004_alter_customuser_preferred_language.py  0005_alter_customuser_email_and_more.py  0005_alter_customuser_preferred_language.py  0006_customuser_telegram_id.py
moses/services/: credentials_confirmation.py  google_auth.py  messages.py  mfa.py  reset_password.py  sms.py  telegram_auth.py
moses/templates/admin/: login.html
moses/views/: google_auth.py  telegram_auth.py  token_obtain_pair.py  user.py
runConfigurations/: test moses.run.xml
test_project/: api_calls.py  manage.py  pytest.ini  requirements.txt  settings.py  urls.py
test_project/app_for_tests/: __init__.py  change_email.py  change_password.py  change_phone_number.py  confirm_email.py  confirmations.py  login.py  mocks.py  registration.py  reset_password.py  test_message_templates.py  utils.py
test_project/app_for_tests/fixtures/: change_phone_number.json  confirm_email.json  registration.json  reset_password.json
test_project/fixtures/tests/: get_user_roles_test_case.json
test_project/runConfigurations/: pytest.run.xml  test moses.run.xml
test_project/tests/: __init__.py  accounts.py  change_email.py  change_password.py  confirm_email.py  confirmations.py  login.py  mocks.py  registration.py  reset_password.py  utils.py
test_project/tests/fixtures/: change_email.json  login.json  registration.json
