[project]
name = "django-moses"
version = "0.14.2"
description = "Advanced authentication with OTP and phone number verification"
authors = [
    {name = "Vassily Vorobyov", email = "l3acucm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.0,<6.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "google-auth (>=2.29.0,<3.0.0)",
    "social-auth-app-django (>=5.7.0,<6.0.0)",
    "google-auth-oauthlib (>=1.2.4,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "moses", from = "." }]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
factory-boy = "^3.2.1"
psycopg = "^3.1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["moses", "moses.migrations", "moses.views", "moses.services", "moses.common"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
pythonpath = "."
addopts = "--nomigrations"
python_files = ["moses/**/*.py", "test_project/*.py"]